qtdragon/hd -add grids INI setting

--- a/configs/sim/qtdragon/qtdragon_multi_joint/qtdragon_xyyzw.ini
+++ b/configs/sim/qtdragon/qtdragon_multi_joint/qtdragon_xyyzw.ini
@@ -3,15 +3,15 @@
 
 [EMC]
 VERSION = 1.1
-MACHINE = qtdragon_inch
+MACHINE = qtdragon
 DEBUG = 0x00000000
 
 [DISPLAY]
 # sets qtdragon as screen. for debug output to terminal add -d or -v
 # sets window title
 # sets icon in task manager
-DISPLAY = qtvcp qtdragon
-TITLE = QtDragon XYZ Inch
+DISPLAY = qtvcp -d qtdragon
+TITLE = QtDragon XYYZ
 ICON = silver_dragon.png
 
 # qtdragon saves most preference to this file
@@ -35,16 +35,13 @@ MAX_SPINDLE_0_SPEED = 20000
 # max spindle power in Watts
 MAX_SPINDLE_POWER = 2000
 
-# min/max/default jog velocities in qtdragon in units/second
+# min/max/default jog velocities in qtdragon in units/sec
 MIN_LINEAR_VELOCITY     = 0
-MAX_LINEAR_VELOCITY     = 1.00
-DEFAULT_LINEAR_VELOCITY = 0.25
+MAX_LINEAR_VELOCITY     = 60.00
+DEFAULT_LINEAR_VELOCITY = 50.0
 
 # incremental jog step length options
 INCREMENTS = 10 mm, 1.0 mm, 0.10 mm, 0.01 mm, 1.0 inch, 0.1 inch, 0.01 inch
-
-# Display grid increments
-GRIDS = 0, .1 mm, 1 mm, 2 mm, 5 mm, 10 mm, .25 in, .5 in
 
 CYCLE_TIME = 100
 INTRO_GRAPHIC = silver_dragon.png
@@ -66,39 +63,9 @@ MDI_HISTORY_FILE = mdi_history.dat
 # qtdragon saves rnning logs to this file
 LOG_FILE = qtdragon.log
 
-# optional user dialogs (3), controlled by HAL pins
-# persistent
-MESSAGE_BOLDTEXT = Critical and Persistent
-MESSAGE_TEXT = This is a persistent dialog test
-MESSAGE_DETAILS = There seems to be something wrong\n You must fix it to clear message
-MESSAGE_TYPE = nonedialog
-MESSAGE_PINNAME = nonedialogtest
-MESSAGE_ICON = CRITICAL
-
-# yes no choice
-MESSAGE_BOLDTEXT = Do You Want To Make A Choice?
-MESSAGE_TEXT = This is a yes no dialog test
-MESSAGE_DETAILS = Y/N DETAILS
-MESSAGE_TYPE = yesnodialog
-MESSAGE_PINNAME = yndialogtest
-MESSAGE_ICON = QUESTION
-
-# acknowledge
-MESSAGE_BOLDTEXT = This is an information message
-MESSAGE_TEXT = This is low priority
-MESSAGE_DETAILS = press ok to clear
-MESSAGE_TYPE = okdialog status
-MESSAGE_PINNAME = bothtest
-MESSAGE_ICON = INFO
-
-# optional tab showing an external qtvcp panel
-EMBED_TAB_NAME=Vismach demo
-EMBED_TAB_COMMAND=qtvcp vismach_mill_xyz
-EMBED_TAB_LOCATION=tabWidget_utilities
-
 [MDI_COMMAND_LIST]
 # for macro buttons on main oage up to 10 possible
-MDI_COMMAND_MACRO0 = G0 Z2;X0 Y0;Z0, Goto\nUser\nZero
+MDI_COMMAND_MACRO0 = G0 Z25;X0 Y0;Z0, Goto\nUser\nZero
 MDI_COMMAND_MACRO1 = G53 G0 Z0;G53 G0 X0 Y0,Goto\nMachn\nZero
 
 [FILTER]
@@ -114,10 +81,12 @@ jpg = image-to-gcode
 py = python3
 
 [KINS]
-KINEMATICS = trivkins coordinates=XYZ
-JOINTS = 3
+KINEMATICS = trivkins coordinates=XYYZW kinstype=BOTH
+JOINTS = 5
 
 [EMCIO]
+EMCIO = io
+CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
 [RS274NGC]
@@ -125,7 +94,7 @@ TOOL_TABLE = tool.tbl
 PARAMETER_FILE = qtdragon.var
 
 # start up G/M codes when first loaded
-RS274NGC_STARTUP_CODE = G17 G20 G40 G43H0 G54 G64P0.0005 G80 G90 G94 G97 M5 M9
+RS274NGC_STARTUP_CODE = G17 G21 G40 G43H0 G54 G64P0.0127 G80 G90 G94 G97 M5 M9
 
 # subroutine/remap path list
 SUBROUTINE_PATH = ../../../../nc_files/probe/basic_probe/macros:~/linuxcnc/nc_files/examples/ngcgui_lib:~/linuxcnc/nc_files/examples/ngcgui_lib/utilitysubs
@@ -145,8 +114,8 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [TRAJ]
-COORDINATES = XYZ
-LINEAR_UNITS = inch
+COORDINATES = XYYZW
+LINEAR_UNITS = metric
 ANGULAR_UNITS = degree
 MAX_LINEAR_VELOCITY = 60.00
 DEFAULT_LINEAR_VELOCITY = 50.00
@@ -155,8 +124,8 @@ SPINDLES = 1
 [HAL]
 HALUI = halui
 # loads the HAL machine simulation
-HALFILE = core_sim.hal
-HALFILE = simulated_home.hal
+HALFILE = gantrysim-5.hal
+HALFILE = simulated-xyyz-5-home.hal
 
 # this file is loaded after qtdragon has made it's HAl pins
 # you can add multiple entries
@@ -177,90 +146,138 @@ POSTGUI_HALFILE = qtdragon_postgui.hal
 USE_PROBE = basicprobe
 
 [AXIS_X]
-MIN_LIMIT = -0.01
-MAX_LIMIT = 20.0
-MAX_VELOCITY = 2.5
-MAX_ACCELERATION = 20
+MIN_LIMIT = -0.001
+MAX_LIMIT = 520.0
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 500.0
 
 [AXIS_Y]
-MIN_LIMIT = -0.01
-MAX_LIMIT = 25.0
-MAX_VELOCITY = 2.5
-MAX_ACCELERATION = 20.0
+MIN_LIMIT = -0.001
+MAX_LIMIT = 630.0
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 500.0
 
 [AXIS_Z]
 # used by external offsets for auto spindle lift
 OFFSET_AV_RATIO  = 0.2
-MIN_LIMIT = -4.5
-MAX_LIMIT = 0.5
-MAX_VELOCITY = 1.5
-MAX_ACCELERATION = 20.0
+MIN_LIMIT = -115.0
+MAX_LIMIT = 10.0
+MAX_VELOCITY = 40.0
+MAX_ACCELERATION = 500.0
 
 [JOINT_0]
 AXIS = X
-MIN_LIMIT = -0.01
-MAX_LIMIT = 20.0
-MAX_VELOCITY = 2.5
-MAX_ACCELERATION = 20.0
+MIN_LIMIT = -0.001
+MAX_LIMIT = 520.0
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 500.0
 TYPE = LINEAR
 SCALE = 160.0
-STEPGEN_MAX_VEL = 2.75
-STEPGEN_MAX_ACC = 24.0
-FERROR = 0.050
-MIN_FERROR = 0.010
+STEPGEN_MAX_VEL = 72.0
+STEPGEN_MAX_ACC = 600.0
+FERROR = 1.0
+MIN_FERROR = 0.5
 MAX_OUTPUT = 0
 MAX_ERROR = 0.0127
-HOME = 0.75
-HOME_OFFSET = 0.00000
-HOME_SEARCH_VEL = 0.75
-HOME_LATCH_VEL = 0.5
-HOME_SEQUENCE = 1
+HOME = 20.0
+HOME_OFFSET = -0.1
+HOME_SEARCH_VEL = -20.000000
+HOME_LATCH_VEL = 10.000
+HOME_SEQUENCE = 2
 HOME_USE_INDEX = False
 HOME_IGNORE_LIMITS = False
 HOME_IS_SHARED = 1
 
 [JOINT_1]
 AXIS = Y
-MIN_LIMIT = -0.01
-MAX_LIMIT = 25.0
-MAX_VELOCITY = 2.5
-MAX_ACCELERATION = 20.0
+MIN_LIMIT = -0.001
+MAX_LIMIT = 630.0
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 500.0
 TYPE = LINEAR
 SCALE = 160.0
-STEPGEN_MAX_VEL = 2.75
-STEPGEN_MAX_ACC = 24.0
-FERROR = 0.050
-MIN_FERROR = 0.010
-MAX_OUTPUT = 0
-MAX_ERROR = 0.0127
-HOME = 0.75
-HOME_OFFSET = 0.000000
-HOME_SEARCH_VEL = 0.75
-HOME_LATCH_VEL = 0.5
-HOME_SEQUENCE = 2
-HOME_USE_INDEX = False
-HOME_IGNORE_LIMITS = False
-
-[JOINT_2]
-AXIS = Z
-MIN_LIMIT = -4.5
-MAX_LIMIT = 0.5
-MAX_VELOCITY = 1.5
-MAX_ACCELERATION = 20.0
-TYPE = LINEAR
-SCALE = 160.0
-STEPGEN_MAX_VEL = 1.5
-STEPGEN_MAX_ACC = 24.0
+STEPGEN_MAX_VEL = 72.0
+STEPGEN_MAX_ACC = 600.0
 FERROR = 1.0
 MIN_FERROR = 0.5
 MAX_OUTPUT = 0
 MAX_ERROR = 0.0127
-HOME = -0.5
-HOME_OFFSET = 0.000000
-HOME_SEARCH_VEL = 0.75
-HOME_LATCH_VEL = 0.5
+HOME = 20.0
+HOME_OFFSET = -0.1
+HOME_SEARCH_VEL = -20.00
+HOME_LATCH_VEL = 10.00
+HOME_SEQUENCE = -1
+HOME_USE_INDEX = False
+HOME_IGNORE_LIMITS = False
+
+[JOINT_2]
+AXIS = Y
+MIN_LIMIT = -0.001
+MAX_LIMIT = 630.0
+MAX_VELOCITY = 60.0
+MAX_ACCELERATION = 500.0
+TYPE = LINEAR
+SCALE = 160.0
+STEPGEN_MAX_VEL = 72.0
+STEPGEN_MAX_ACC = 600.0
+FERROR = 1.0
+MIN_FERROR = 0.5
+MAX_OUTPUT = 0
+MAX_ERROR = 0.0127
+HOME = 20.0
+HOME_OFFSET = -0.1
+HOME_SEARCH_VEL = -20.00
+HOME_LATCH_VEL = 10.00
+HOME_SEQUENCE = -1
+HOME_USE_INDEX = False
+HOME_IGNORE_LIMITS = False
+
+[JOINT_3]
+AXIS = Z
+MIN_LIMIT = -115.0
+MAX_LIMIT = 10.0
+MAX_VELOCITY = 40.0
+MAX_ACCELERATION = 500.0
+TYPE = LINEAR
+SCALE = 160.0
+STEPGEN_MAX_VEL = 48.0
+STEPGEN_MAX_ACC = 600.0
+FERROR = 1.0
+MIN_FERROR = 0.5
+MAX_OUTPUT = 0
+MAX_ERROR = 0.0127
+HOME = -10.0
+HOME_OFFSET = 0.1
+HOME_SEARCH_VEL = 20.000000
+HOME_LATCH_VEL = 10.00
 HOME_SEQUENCE = 0
 HOME_USE_INDEX = False
 HOME_IGNORE_LIMITS = False
 HOME_IS_SHARED = 1
 
+#******************************************
+[AXIS_W]
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 120.0
+MIN_LIMIT = 0.0
+MAX_LIMIT = 20.0
+
+[JOINT_4]
+TYPE = LINEAR
+HOME = .20
+FERROR = 10.0
+MIN_FERROR = 1.0
+MAX_ERROR = 0.0127
+MAX_VELOCITY = 20
+MAX_ACCELERATION = 120.0
+# The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
+# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
+STEPGEN_MAX_VEL = 25
+STEPGEN_MAX_ACC = 150.00
+MAX_OUTPUT = 0.0
+STEP_SCALE = 200
+MIN_LIMIT = 0.0
+MAX_LIMIT = 20.0
+HOME_OFFSET = -0.25000
+
+HOME_SEQUENCE = 3
