--- a/configs/sim/qtdragon/qtdragon_xyz/qtdragon_xyza.ini
+++ b/configs/sim/qtdragon/qtdragon_xyz/qtdragon_xyza.ini
@@ -48,6 +48,9 @@ MAX_ANGULAR_VELOCITY = 360
 INCREMENTS = 10 mm, 1.0 mm, 0.10 mm, 0.01 mm, 1.0 inch, 0.1 inch, 0.01 inch
 ANGULAR_INCREMENTS = 0.1 deg, 1 deg, 10 deg, 22.5 deg, 30 deg, 45 deg, 90 deg
 
+# Display grid increments
+GRIDS = 0, .1 mm, 1 mm, 2 mm, 5 mm, 10 mm, .25 in, .5 in
+
 CYCLE_TIME = 100
 INTRO_GRAPHIC = silver_dragon.png
 INTRO_TIME = 2
