Gmoccapy-integration halui MDI commands

--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -96,7 +96,11 @@ HALUI = halui
 
 # Trajectory planner section --------------------------------------------------
 [HALUI]
-#No Content
+MDI_COMMAND = M6 T1
+MDI_COMMAND = M6 T2
+MDI_COMMAND = M61 Q1
+MDI_COMMAND = M61 Q2
+MDI_COMMAND = M6 T3 G4 P10
 
 [TRAJ]
 COORDINATES =      X Y Z 
