Backport new hm2_modbus driver to 2.9 branch.

--- a/debian/linuxcnc.install.in
+++ b/debian/linuxcnc.install.in
@@ -54,6 +54,7 @@ usr/bin/max5gui
 usr/bin/mb2hal
 usr/bin/mdi
 usr/bin/melfagui
+usr/bin/mesambccc
 usr/bin/milltask
 usr/bin/millturngui
 usr/bin/mitsub_vfd
