--- a/debian/linuxcnc.manpages.in
+++ b/debian/linuxcnc.manpages.in
@@ -52,6 +52,7 @@ usr/share/man/man1/max5gui.1
 usr/share/man/man1/mb2hal.1
 usr/share/man/man1/mdi.1
 usr/share/man/man1/mdro.1
+usr/share/man/man1/mesambccc.1
 usr/share/man/man1/melfagui.1
 usr/share/man/man1/milltask.1
 usr/share/man/man1/millturn.1
