Reduce the number of translations built to only include ones with actual translations. Fix invalid man-page alias translation attempt.

--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -1,6 +1,12 @@
 [options] --master-charset UTF-8 --localized-charset UTF-8
 
-[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv tr uk vi zh_CN
+# Original list
+#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv tr uk vi zh_CN
+# Actual in makefile(s)
+#[po4a_langs] ar de es fr nb ru sv tr zh_CN
+# Languages with any real translations
+[po4a_langs] de es fr nb ru zh_CN
+
 [po4a_paths] po/documentation.pot $lang:po/$lang.po
 
 [po4a_alias:AsciiDoc_def] AsciiDoc opt:"--keep 0 --option 'entry=lang' --option 'tablecells'"
@@ -406,7 +412,6 @@
 [type: man_def] man/man9/flipflop.9 $lang:man/$lang/man9/flipflop.9
 [type: man_def] man/man9/gantry.9 $lang:man/$lang/man9/gantry.9
 [type: man_def] man/man9/gearchange.9 $lang:man/$lang/man9/gearchange.9
-[type: man_def] man/man9/genserkins.9 $lang:man/$lang/man9/genserkins.9
 [type: man_def] man/man9/gray2bin.9 $lang:man/$lang/man9/gray2bin.9
 [type: man_def] man/man9/histobins.9 $lang:man/$lang/man9/histobins.9
 [type: man_def] man/man9/hypot.9 $lang:man/$lang/man9/hypot.9
