Gmoccapy - change spindle => spindle_0 in *.ini files

--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -22,11 +22,13 @@ CYCLE_TIME = 100
 
 # Values that will be allowed for override, 1.0 = 100%
 MAX_FEED_OVERRIDE    = 1.5
-MAX_SPINDLE_OVERRIDE = 1.2
-MIN_SPINDLE_OVERRIDE = 0.5
+MAX_SPINDLE_0_OVERRIDE = 1.2
+MIN_SPINDLE_0_OVERRIDE = 0.5
 
 # Initial value for spindle speed
-DEFAULT_SPINDLE_SPEED = 450
+# The value will be used the first time Gmoccapy is loaded.
+# It will then be overwritten by the *.pref file.
+DEFAULT_SPINDLE_0_SPEED = 450
 
 # The following are not used, added here to suppress warnings (from qt_istat/logger).
 DEFAULT_LINEAR_VELOCITY = 35
