--- a/configs/sim/gmoccapy/gmoccapy_qt_messages.ini
+++ b/configs/sim/gmoccapy/gmoccapy_qt_messages.ini
@@ -22,14 +22,19 @@ CYCLE_TIME = 100
 
 # Values that will be allowed for override, 1.0 = 100%
 MAX_FEED_OVERRIDE    = 1.5
-MAX_SPINDLE_OVERRIDE = 1.2
-MIN_SPINDLE_OVERRIDE = 0.5
+MAX_SPINDLE_0_OVERRIDE = 1.2
+MIN_SPINDLE_0_OVERRIDE = 0.5
+
+# Initial value for spindle speed
+# The value will be used the first time Gmoccapy is loaded.
+# It will then be overwritten by the *.pref file.
+DEFAULT_SPINDLE_0_SPEED = 450
 
 # Max and default jog speeds in units per second
 MAX_LINEAR_VELOCITY     = 166
 DEFAULT_LINEAR_VELOCITY = 100
 MAX_ANGULAR_VELOCITY    = 234
-DEFAULT_SPINDLE_SPEED   = 450
+
 
 # Prefix to be used
 PROGRAM_PREFIX = ../../nc_files/
