scripts linuxcnc -add RUN-IN-PLACE flag
I added this to the RIP script, but if you switch between 2.9 to master
the 2.9 stuff is not changed.
Hopefully this overrides that problem

--- a/scripts/linuxcnc.in
+++ b/scripts/linuxcnc.in
@@ -296,7 +296,12 @@ EXTRA_ARGS=("$@")
 RUN_IN_PLACE=@RUN_IN_PLACE@
 echo "RUN_IN_PLACE=$RUN_IN_PLACE" >> "$PRINT_FILE"
 
+if [ RUN_IN_PLACE = "yes" ]; then
+    LINUXCNC_RIP_FLAG="True"; export LINUXCNC_RIP_FLAG
+fi
+
 LINUXCNCVERSION="@EMC2VERSION@"; export LINUXCNCVERSION
+
 
 # common from here..
 INIVAR=inivar
