debian: Add files to .gitignore

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -12,7 +12,13 @@ linuxcnc-doc-*/
 
 # generated from `.in` by debian/configure
 linuxcnc-uspace.install
+linuxcnc-uspace.manpages
 
 *.debhelper
 shlibs.local
 linuxcnc-uspace.lintian-overrides
+
+autoreconf.after
+autoreconf.before
+debhelper-build-stamp
+
