--- a/debian/control.docs.in
+++ b/debian/control.docs.in
@@ -12,6 +12,21 @@ Description: motion controller for CNC machines and robots (German documentation
  .
  This package contains the documentation in German.
 
+# Preparing for Tamil
+#Package: linuxcnc-doc-ta
+#Provides: linuxcnc-doc
+#Architecture: all
+#Multi-Arch: foreign
+#Depends: ${misc:Depends}
+#Recommends: xdg-utils
+#Suggests: pdf-viewer
+#Description: motion controller for CNC machines and robots (Tamil documentation)
+# LinuxCNC is the next-generation Enhanced Machine Controller which
+# provides motion control for CNC machine tools and robotic
+# applications (milling, cutting, routing, etc.).
+# .
+# This package contains the documentation in Tamil.
+
 Package: linuxcnc-doc-en
 Provides: linuxcnc-doc
 Architecture: all
