Documentation: build process: Add files for Tamil
Also removed Turkish, which is yet too incomplete and is not built.

--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -1,9 +1,9 @@
 [options] --master-charset UTF-8 --localized-charset UTF-8
 
 # Original list
-#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv tr uk vi zh_CN
+#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv ta tr uk vi zh_CN
 # Actual in makefile(s)
-#[po4a_langs] ar de es fr nb ru sv tr zh_CN
+#[po4a_langs] ar de es fr nb ru sv ta tr zh_CN
 # Languages with any real translations
 [po4a_langs] de es fr nb ru zh_CN
 
