--- a/debian/rules.in
+++ b/debian/rules.in
@@ -129,10 +129,8 @@ override_dh_compress:
 
 override_dh_fixperms:
 	dh_fixperms -X/linuxcnc_module_helper -X/rtapi_app
-	# In case that only the indep packages are built
-	if [ -r  "$(DESTDIR)/usr/lib/tcltk/linuxcnc/linuxcnc.tcl" ]; then \
-		chmod -x $(DESTDIR)/usr/lib/tcltk/linuxcnc/linuxcnc.tcl; \
-	fi
+	# FIXME: Who sets those -x flags? This better be fixed at the root of the problem - to be found.
+	find debian -name linuxcnc.tcl -o -name cbutton.tcl -o -name mdi_text.py -o -name util.py | xargs -r chmod -x
 	# override_dh_python3: # not executed, so we attach it to fixperms
 	DEB_HOST_ARCH=`dpkg-architecture -qDEB_HOST_ARCH` dh_python3
 
