Simply over-write the LinuxCNC tp folder with the Tormach one

--- a/src/emc/tp/meson.build
+++ b/src/emc/tp/meson.build
@@ -1,8 +1,13 @@
 tp_srcs = files([
+    'blendmath.c',
+    'joint_util.c',
+    'spherical_arc.c',
+    'spherical_arc9.c',
     'tc.c',
     'tcq.c',
     'tp.c',
-    'spherical_arc.c',
-    'blendmath.c',
+    'math_util.c',
+    'pm_line9.c',
+    'pm_circle9.c',
 ])
 tp_inc = include_directories(['.'])
