--- a/src/libnml/posemath/meson.build
+++ b/src/libnml/posemath/meson.build
@@ -1,10 +1,11 @@
 posemath_cpp_srcs = files([
-    'posemath.cc',
+    'posemath_ext.cc',
 ])
 posemath_srcs = files([
-    '_posemath.c',
+    'posemath.c',
     'sincos.c',
     'gomath.c',
+    'pm_vector.c',
 ])
 
 posemath_inc = include_directories('.')
