--- a/configs/sim/qtdragon/qtdragon_multi_joint/qtdragon_xyyzw.ini
+++ b/configs/sim/qtdragon/qtdragon_multi_joint/qtdragon_xyyzw.ini
@@ -123,6 +123,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 # loads the HAL machine simulation
 HALFILE = gantrysim-5.hal
 HALFILE = simulated-xyyz-5-home.hal
