--- a/configs/sim/qtdragon/qtdragon_xyz45/qtdragon_xyzac.ini
+++ b/configs/sim/qtdragon/qtdragon_xyz45/qtdragon_xyzac.ini
@@ -126,6 +126,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 # loads the HAL machine simulation
 HALFILE = core_sim_XYZAC.hal
 HALFILE = simulated_home.hal
