--- a/configs/sim/qtdragon/qtdragon_multi_joint/qtdragon_yyxz.ini
+++ b/configs/sim/qtdragon/qtdragon_multi_joint/qtdragon_yyxz.ini
@@ -121,6 +121,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 # loads the HAL machine simulation
 HALFILE = gantrysim.hal
 HALFILE = simulated-xyyz-home.hal
