--- a/configs/sim/qtdragon/qtdragon_xyz/qtdragon_inch.ini
+++ b/configs/sim/qtdragon/qtdragon_xyz/qtdragon_inch.ini
@@ -154,6 +154,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 # loads the HAL machine simulation
 HALFILE = core_sim.hal
 HALFILE = simulated_home.hal
