--- a/configs/sim/qtdragon/qtdragon_xyz45/qtdragon_xyza.ini
+++ b/configs/sim/qtdragon/qtdragon_xyz45/qtdragon_xyza.ini
@@ -126,6 +126,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 # loads the HAL machine simulation
 HALFILE = gantrysim.hal
 HALFILE = simulated-gantry-home.hal
