qtdragon_lathe -sims: add hal_bridge to ini

--- a/configs/sim/qtdragon_lathe/basic_xz_lathe/lathe.ini
+++ b/configs/sim/qtdragon_lathe/basic_xz_lathe/lathe.ini
@@ -56,8 +56,10 @@ SERVO_PERIOD = 1000000
 CYCLE_TIME = 0.001
 
 [HAL]
-          HALUI = halui
-        HALFILE = LIB:basic_sim.tcl
+HALUI = halui
+HALBRIDGE = hal_bridge
+
+HALFILE = LIB:basic_sim.tcl
 POSTGUI_HALFILE = lathe_postgui.hal
 
 [TRAJ]
