qtdragon_hd -sims: add hal_bridge to ini

--- a/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_vertical_xyza.ini
+++ b/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_vertical_xyza.ini
@@ -129,6 +129,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 # loads the HAL machine simulation
 HALFILE = gantrysim.hal
 HALFILE = simulated-gantry-home.hal
