--- a/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_xyz.ini
+++ b/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_xyz.ini
@@ -124,6 +124,8 @@ SPINDLES = 1
 
 [HAL]
 HALUI = halui
+HALBRIDGE = hal_bridge
+
 HALFILE = core_sim.hal
 HALFILE = simulated_home.hal
 # this file is loaded after qtdragon has made it's HAl pins
