debian -add hal_bridge component

--- a/debian/linuxcnc.install.in
+++ b/debian/linuxcnc.install.in
@@ -15,6 +15,7 @@ usr/bin/gs2_vfd
 usr/bin/gscreen
 usr/bin/hal-histogram
 usr/bin/hal_input
+usr/bin/hal_bridge
 usr/bin/hal_manualtoolchange
 usr/bin/halcmd
 usr/bin/halcmd_twopass
