debian: Addressed lintian warnings

--- a/debian/control.top.in
+++ b/debian/control.top.in
@@ -13,12 +13,12 @@ Build-Depends:
     @KERNEL_HEADERS@,
     @MODUTILS_DEPENDS@,
     @EXTRA_BUILD@,
-    docbook-xsl,
+    docbook-xsl <!nodoc>,
     asciidoc,
-    ghostscript,
-    groff-base,
-    imagemagick,
-    asciidoc-dblatex,
+    ghostscript <!nodoc>,
+    groff-base <!nodoc>,
+    imagemagick <!nodoc>,
+    asciidoc-dblatex <!nodoc>,
     autoconf,
     automake,
     bwidget (>= 1.7),
@@ -38,7 +38,8 @@ Build-Depends:
     libusb-1.0-0-dev,
     libxmu-dev,
     netcat-traditional | netcat-openbsd | netcat,
-    po4a,
+    netpbm,
+    po4a <!nodoc>,
     procps,
     psmisc,
     python3,
