Modified TCLLIBPATH appendations in scripts/linuxcnc.in and scripts/rip-environment.in since they are not in TCL list style but in PATH style. In PATH style, the current appendation causes the Linuxcnc TCL package not to be found if there is already a TCLLIBPATH definition.

--- a/scripts/rip-environment.in
+++ b/scripts/rip-environment.in
@@ -76,7 +76,7 @@ GLADE_ICON_THEME_PATH=$EMC2_HOME/share/glade/pixmaps:"$GLADE_ICON_THEME_PATH"; e
 if [ -z "$TCLLIBPATH" ]; then
     TCLLIBPATH=$EMC2_HOME/tcl
 else
-    TCLLIBPATH=$EMC2_HOME/tcl:$TCLLIBPATH
+    TCLLIBPATH="$EMC2_HOME/tcl $TCLLIBPATH"
 fi
 
 if [ -z "$LD_LIBRARY_PATH" ]; then
