--- a/scripts/linuxcnc.in
+++ b/scripts/linuxcnc.in
@@ -98,7 +98,7 @@ if test "xyes" != "x@RUN_IN_PLACE@"; then
     if [ -z "$TCLLIBPATH" ]; then
          TCLLIBPATH=$LINUXCNC_HOME/lib/tcltk
     else
-        TCLLIBPATH=$LINUXCNC_HOME/lib/tcltk:"$TCLLIBPATH"
+        TCLLIBPATH="$LINUXCNC_HOME/lib/tcltk $TCLLIBPATH"
     fi
     export TCLLIBPATH
 fi
