docs: Preparing build infrastructure for ukranian language

--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -1,11 +1,15 @@
 [options] --master-charset UTF-8 --localized-charset UTF-8
 
+# The po4a_langs attrib determines the languages addressed for compilation.
+# If your focus is on a single already prepared language then all you need is to
+# constrain this list. For adding a new language, also edit docs/src/Submakefile.
+
 # Original list
-#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv ta tr uk vi zh_CN
+#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv ta tr uk ua vi zh_CN
 # Actual in makefile(s)
-#[po4a_langs] ar de es fr nb ru sv ta tr zh_CN
+#[po4a_langs] ar de es fr nb ru sv ta tr ua zh_CN
 # Languages with any real translations
-[po4a_langs] de es fr nb ru zh_CN
+[po4a_langs] de es fr nb ru ua zh_CN
 
 [po4a_paths] po/documentation.pot $lang:po/$lang.po
 
