--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -5,11 +5,11 @@
 # constrain this list. For adding a new language, also edit docs/src/Submakefile.
 
 # Original list
-#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv ta tr uk ua vi zh_CN
+#[po4a_langs] ar bg ckb cs da de es fr hu it ka nb pl pt_BR pt ro ru sai sk sv ta tr uk vi zh_CN
 # Actual in makefile(s)
-#[po4a_langs] ar de es fr nb ru sv ta tr ua zh_CN
+#[po4a_langs] ar de es fr nb ru sv ta tr uk zh_CN
 # Languages with any real translations
-[po4a_langs] de es fr nb ru ua zh_CN
+[po4a_langs] de es fr nb ru uk zh_CN
 
 [po4a_paths] po/documentation.pot $lang:po/$lang.po
 
