--- a/debian/control.docs.in
+++ b/debian/control.docs.in
@@ -12,7 +12,7 @@ Description: motion controller for CNC machines and robots (German documentation
  .
  This package contains the documentation in German.
 
-Package: linuxcnc-doc-ua
+Package: linuxcnc-doc-uk
 Provides: linuxcnc-doc
 Architecture: all
 Multi-Arch: foreign
