Temporarily disabled 'uk' - to have some success

--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -9,7 +9,7 @@
 # Actual in makefile(s)
 #[po4a_langs] ar de es fr nb ru sv ta tr uk zh_CN
 # Languages with any real translations
-[po4a_langs] de es fr nb ru uk zh_CN
+[po4a_langs] de es fr nb ru zh_CN
 
 [po4a_paths] po/documentation.pot $lang:po/$lang.po
 
