qtdragon_lathe -fix sim for thread routine - was finding wrong file
thread.ngs was also inside the example nc_files/ folder.
Need to find a better way ro specify the path

--- a/configs/sim/qtdragon_lathe/basic_xz_lathe/lathe_ncam.ini
+++ b/configs/sim/qtdragon_lathe/basic_xz_lathe/lathe_ncam.ini
@@ -25,7 +25,7 @@ MAX_LINEAR_VELOCITY     = 60.00
 DEFAULT_LINEAR_VELOCITY = 50.0
 DEFAULT_LINEAR_JOG_VEL  = 50.0
 
-PROGRAM_PREFIX = ../../nc_files/
+PROGRAM_PREFIX = ../nc_files/
 # NCAM directory
 NCAM_DIR = ~/nativecam/
 
@@ -114,7 +114,7 @@ MAX_ACCELERATION = 20.0
 
 [AXIS_Z]
        MIN_LIMIT = -2.0
-       MAX_LIMIT = 4.0
+       MAX_LIMIT = 14.0
     MAX_VELOCITY = 3.333333
 MAX_ACCELERATION = 20.0
 
@@ -123,7 +123,7 @@ MAX_ACCELERATION = 20.0
     MAX_VELOCITY = 3.333333
 MAX_ACCELERATION = 20.0
        MIN_LIMIT = -2.0
-       MAX_LIMIT = 4.0
+       MAX_LIMIT = 14.0
  HOME_SEARCH_VEL = 5.0
   HOME_LATCH_VEL = 1.0
    HOME_SEQUENCE = 1
