improved scurve ini for quicker more wide testing

--- a/configs/sim/axis/axis_mm_scurve.ini
+++ b/configs/sim/axis/axis_mm_scurve.ini
@@ -54,6 +54,7 @@ HALFILE = axis_mm_scurve.hal
 # PLANNER_TYPE: Select the acceleration profile shape
 #   0 = Trapezoidal (traditional - constant acceleration)
 #   1 = S-curve (smoother - limited jerk/derivative of acceleration)
+#   2 = S-curve (smoother - but sharp in corners - to be deprecated)
 # Default: 0 (trapezoidal)
 #
 # NOTE: This parameter can be changed at RUNTIME via HAL pin:
@@ -97,6 +98,7 @@ DEFAULT_LINEAR_VELOCITY = 100.0
 MAX_LINEAR_VELOCITY = 300.0
 DEFAULT_LINEAR_ACCELERATION = 500.0
 MAX_LINEAR_ACCELERATION = 1000.0
+NO_FORCE_HOMING = 1 #to be able to run gcodes and MDI without homing
 
 
 ARC_BLEND_ENABLE = 1
@@ -132,6 +134,7 @@ TYPE = LINEAR
 HOME = 0.0
 MAX_VELOCITY = 300.0
 MAX_ACCELERATION = 1000.0
+HOME_SEQUENCE = 0
 
 # MAX_JERK: Maximum jerk for this joint
 # Units: machine-units/second^3
@@ -141,8 +144,8 @@ MAX_ACCELERATION = 1000.0
 # to avoid limiting coordinated motion.
 MAX_JERK = 1000.0
 
-MIN_LIMIT = -200.0
-MAX_LIMIT = 200.0
+#MIN_LIMIT = -200.0 #disabled to give more space for testing g-codes
+#MAX_LIMIT = 200.0 #disabled to give more space for testing g-codes
 
 [JOINT_1]
 TYPE = LINEAR
@@ -150,8 +153,9 @@ HOME = 0.0
 MAX_VELOCITY = 300.0
 MAX_ACCELERATION = 1000.0
 MAX_JERK = 1000.0
-MIN_LIMIT = -200.0
-MAX_LIMIT = 200.0
+#MIN_LIMIT = -200.0 #disabled to give more space for testing g-codes
+#MAX_LIMIT = 200.0 #disabled to give more space for testing g-codes
+HOME_SEQUENCE = 0
 
 [JOINT_2]
 TYPE = LINEAR
@@ -159,16 +163,17 @@ HOME = 0.0
 MAX_VELOCITY = 200.0
 MAX_ACCELERATION = 800.0
 MAX_JERK = 800.0
-MIN_LIMIT = -100.0
-MAX_LIMIT = 100.0
+#MIN_LIMIT = -100.0 #disabled to give more space for testing g-codes
+#MAX_LIMIT = 100.0 #disabled to give more space for testing g-codes
+HOME_SEQUENCE = 0
 
 # ========================================================
 # AXIS CONFIGURATION
 # ========================================================
 
 [AXIS_X]
-MIN_LIMIT = -200.0
-MAX_LIMIT = 200.0
+#MIN_LIMIT = -200.0 #disabled to give more space for testing g-codes
+#MAX_LIMIT = 200.0 #disabled to give more space for testing g-codes
 MAX_VELOCITY = 300.0
 MAX_ACCELERATION = 1000.0
 
@@ -178,15 +183,15 @@ MAX_ACCELERATION = 1000.0
 MAX_JERK = 1000.0
 
 [AXIS_Y]
-MIN_LIMIT = -200.0
-MAX_LIMIT = 200.0
+#MIN_LIMIT = -200.0 #disabled to give more space for testing g-codes
+#MAX_LIMIT = 200.0 #disabled to give more space for testing g-codes
 MAX_VELOCITY = 300.0
 MAX_ACCELERATION = 1000.0
 MAX_JERK = 1000.0
 
 [AXIS_Z]
-MIN_LIMIT = -100.0
-MAX_LIMIT = 100.0
+#MIN_LIMIT = -100.0 #disabled to give more space for testing g-codes
+#MAX_LIMIT = 100.0 #disabled to give more space for testing g-codes
 MAX_VELOCITY = 200.0
 MAX_ACCELERATION = 800.0
 MAX_JERK = 800.0
