--- a/debian/control.top.in
+++ b/debian/control.top.in
@@ -63,13 +63,14 @@ Rules-Requires-Root: binary-targets
 Package: @MAIN_PACKAGE_NAME@-dev
 Architecture: any
 Conflicts: linuxcnc-sim-dev, @OTHER_MAIN_PACKAGE_NAME@-dev
-Depends: ${misc:Depends},
-         ${python3:Depends},
-         @KERNEL_HEADERS@,
-         python3-serial,
-         @MAIN_PACKAGE_NAME@ (= ${binary:Version}),
-         udev,
-         @YAPPS_RUNTIME@
+Depends:
+    ${misc:Depends},
+    ${python3:Depends},
+    @KERNEL_HEADERS@,
+    python3-serial,
+    @MAIN_PACKAGE_NAME@ (= ${binary:Version}),
+    udev,
+    @YAPPS_RUNTIME@
 Section: devel
 Description: PC based motion controller for real-time Linux
  LinuxCNC is a fully-realised CNC machine controller that can interpret
