d/control: Added build-dep x11-xserver-utils <!nocheck>

--- a/debian/control.top.in
+++ b/debian/control.top.in
@@ -50,6 +50,7 @@ Build-Depends:
     tcl@TCLTK_VERSION@-dev,
     tclx,
     tk@TCLTK_VERSION@-dev,
+    x11-xserver-utils <!nocheck>,
     xvfb,
     yapps2
 Build-Depends-Indep:
