--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -25,15 +25,16 @@ MAX_FEED_OVERRIDE    = 1.5
 MIN_SPINDLE_0_OVERRIDE = 0.5
 MAX_SPINDLE_0_OVERRIDE = 1.2
 
-# Initial value for spindle speed
+# Spindel start speed
 DEFAULT_SPINDLE_0_SPEED = 450
+# Scaling of spindle speed bar
+MIN_SPINDLE_0_SPEED     = 0
+MAX_SPINDLE_0_SPEED     = 3000
 
 # The following are not used, added here to suppress warnings (from qt_istat/logger).
 DEFAULT_LINEAR_VELOCITY = 35
 MIN_LINEAR_VELOCITY     = 0
 MAX_LINEAR_VELOCITY     = 234
-MIN_SPINDLE_0_SPEED     = 0
-MAX_SPINDLE_0_SPEED     = 3000
 
 # Prefix to be used
 PROGRAM_PREFIX = ../../nc_files/
